Update Sample of Nav/nav2.html

--- a/Sample of Nav/nav2.html
+++ b/Sample of Nav/nav2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
    <html>
    <head>
@@ -199,19 +198,24 @@
 	<li><a href="#">Site Map</a></li>
 </ul>
 
-    <div id="globalsearch">
-        <form action="/search/" method="post" class="search" id="g-search"><div class="sp-label">
+     <div id="globalsearch">
+
+
+        <form action="http://www.google.com/search" method="get" class="search" id="g-search"><div class="sp-label">
             <label for="sp-searchtext">Search</label>
             <input type="text" name="q" id="sp-searchtext" accesskey="s" />
+			
+
         </div></form>
+
+
+
+
         <div id="sp-magnify"><div class="magnify-searchmode"></div><div class="magnify"></div></div>
         <div id="sp-results"></div>
     </div>
 </nav>
-<script type="text/javascript">
-    AC.GlobalNav.Instance = new AC.GlobalNav();
-</script>
-<!-- SiteCatalyst code version: H.8. Copyright 1997-2006 Omniture, Inc. -->
+
 
 </body>
 </html>
