--- a/final project html/index.html
+++ b/final project html/index.html
@@ -14,56 +14,56 @@
 	<div id="body">
 		<header id="main_header">
 			<!--Code Monkey Logo in Css-->
-			<h1>Client Project Site</h1>
+			<h1>Client Site: COMP1950</h1>
 		</header>
 
 		<nav id="main_nav">
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Proto-site</a></li>
-				<li><a href="#">WireFrames</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="protosite/index.html">Proto-site</a></li>
+				<li><a href="wireframe.html">WireFrames</a></li>
 			</ul>
 		</nav>
 
+		<!--<div id="search_bar">
+			<p>Search</p>
+		</div>-->
+
 		<section id="main_content">
-			<section>
-				<article id="introduction">
-					<h2>Introduction</h2>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
-			</section>
-			<section>
-				<article id="rationale">
-					<h2>Rationale</h2>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</article>
-			</section>
-			<section>
-				<article id="members">
-					<h2>Members of the Group</h2>
-					<dl>
-						<dt>Jim Cho</dt>
-						<dd>Worked on the Thumblr page, implemented the Javascript, assisted in CSS</dd>
-						<dt>Michelle Quan</dt>
-						<dd>Worked on the HTML5 content pages, assisted in CSS</dd>
-						<dt>Negin Niamir</dt>
-						<dd>Worked on the design/look of the site, completed Wireframes, assisted in CSS</dd>
-						<dt>Robin Orford</dt>
-						<dd>Worked on the CSS of the site</dd>
-					</dl>
-				</article>
-			</section>
+			<header id="maincontent_header">
+				<h2>Welcome to Your Project Site!</h2>
+			</header>
+			<article id="introduction">
+				<h3>Introduction</h3>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+			
+			<article id="rationale">
+				<h3>Rationale</h3>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+		
+			<article id="members">
+				<h3>Members of the Group</h3>
+				<dl>
+					<dt>Jim Cho</dt>
+					<dd>Worked on the Thumblr page, implemented the Javascript, assisted in CSS</dd>
+					<dt>Michelle Quan</dt>
+					<dd>Worked on the HTML5 content pages, assisted in CSS</dd>
+					<dt>Negin Niamir</dt>
+					<dd>Worked on the design/look of the site, completed Wireframes, assisted in CSS</dd>
+					<dt>Robin Orford</dt>
+					<dd>Worked on the CSS of the site</dd>
+				</dl>
+			</article>
+			
 		</section> <!--END OF MAIN_CONTENT SECTION-->
 
-		<div id="referer">
-			<p>
-				<a href="http://validator.w3.org/check?uri=referer"><img
-				src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
-			</p>
-		</div>
-
 		<footer>
-			<p>Copyright&copy;Code Monkey 2012</p>
+			<p id="referer">
+				<a href="http://validator.w3.org/check?uri=referer">HTML Validator</a>
+			</p>
+			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
 		</footer>
 	</div> <!--END OF BODY DIV-->
 </body>
