changes to make the files HTML5 Validate

--- a/final project html/protosite/index.html
+++ b/final project html/protosite/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="body">
-		<a name="top"></a>
+		<a id="top"></a>
 		<header id="main_header">
 			<!--Code Monkey Logo in Css-->
 			<h1>COMP 1950 - Home</h1>
@@ -26,23 +26,21 @@
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="course_outline.html">Course Outline</a></li>
-				<li><a id="lecture_tab" href="#">Lectures</a></li>
-				<nav id="lectures_dropdown">
-					<ul>
-						<li><a href="lectures/lecture1.html">Lecture 1</a></li>
-						<li>Lecture 2</li>
-						<li>Lecture 3</li>
-						<li>Lecture 4</li>
-						<li>Lecture 5</li>
-						<li>Lecture 6</li>
-						<li>Lecture 7</li>
-						<li>Lecture 8</li>
-						<li>Lecture 9</li>
-						<li>Lecture 10</li>
-					</ul>
-				</nav>
+				<li><a id="lecture_tab" href="#">Lectures</a>
+				<ul id="lecture_dropdown">
+					<li><a href="lectures/lecture1.html">Lecture 1</a></li>
+					<li>Lecture 2</li>
+					<li>Lecture 3</li>
+					<li>Lecture 4</li>
+					<li>Lecture 5</li>
+					<li>Lecture 6</li>
+					<li>Lecture 7</li>
+					<li>Lecture 8</li>
+					<li>Lecture 9</li>
+					<li>Lecture 10</li>
+				</ul></li>
 				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="contact.html">Contact</a></li>
 				<li><a href="sitemap.html">SiteMap</a></li>
 			</ul>
 		</nav>
