--- a/final project html/alternate_index/index.html
+++ b/final project html/alternate_index/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="style.css" />
+    <link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script>
 		
@@ -18,18 +19,42 @@
 			<img src="images/monkey1.jpg" alt="code monkey logo" />
 			<h1>Client Site: COMP1950</h1>
 		</header>
+		  <script type="text/javascript">
+    var searchSection = 'global';
+    var searchCountry = 'us';
+</script>
 
-		<nav id="menu">
-			<ul>
+
+<script src="http://images.apple.com/global/nav/scripts/globalnav.js" type="text/javascript" charset="utf-8"></script>
+<nav id="globalheader" class="apple">
+
+<ul id="menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="protosite/index.html">Proto-site</a></li>
 				<li><a href="wireframe.html">WireFrames</a></li>
 			</ul>
-		</nav>
+	
 
-		<!--<div id="search_bar">
-			<p>Search</p>
-		</div>-->
+     <div id="globalsearch">
+
+
+        <form action="http://www.google.com/search" method="get" class="search" id="g-search"><div class="sp-label">
+            <label for="sp-searchtext">Search</label>
+            <input type="text" name="q" id="sp-searchtext" accesskey="s" />
+			
+
+        </div></form>
+
+
+
+
+        <div id="sp-magnify"><div class="magnify-searchmode"></div><div class="magnify"></div></div>
+        <div id="sp-results"></div>
+    </div>
+</nav>
+
+		
+
 
 		<section id="main_content">
 			<header id="maincontent_header">
