Updates to CSS/HTML

--- a/final project html/protosite/alternate_index/index.html
+++ b/final project html/protosite/alternate_index/index.html
@@ -34,6 +34,7 @@
 
 <ul id="menu">
 	<li><a href="#">Home</a></li>
+	<li><a href="course_outline.html">Course Outline</a></li>
 	<li>
 		<a href="#">Lecture</a>
 		<ul>
@@ -184,7 +185,7 @@
 		</nav>
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer">HTML Validator</a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
 			</p>
 			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
