--- a/final project html/protosite/lectures/lecture1.html
+++ b/final project html/protosite/lectures/lecture1.html
@@ -32,7 +32,8 @@
 <nav id="globalheader" class="apple">
 
 <ul id="menu">
-	<li><a href="#">Home</a></li>
+	<li><a href="../index.html">Home</a></li>
+	<li><a href="course_outline.html">Course Outline</a></li>
 	<li>
 		<a href="#">Lecture</a>
 		<ul>
@@ -51,7 +52,7 @@
 		</ul>
 	</li>
 	<li><a href="#">Blog</a></li>
-	<li><a href="#">Assiciated</a></li>
+	<li><a href="#">Associated</a></li>
 	<li><a href="#">Site Map</a></li>
 </ul>
 
@@ -235,8 +236,9 @@
 
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer">HTML Validator</a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
 			</p>
+			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
 		</footer>
 	</div> <!--END OF BODY DIV-->
