--- a/final project html/alternate_index/index.html
+++ b/final project html/alternate_index/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div id="body">
 		<header id="main_header">
-			<!--Code Monkey Logo in Css-->
+			<!--Code Monkey Logo-->
 			<img src="images/monkey1.jpg" alt="code monkey logo" />
 			<h1>Client Site: COMP1950</h1>
 		</header>
