updated linkages on the site and added bottom nav bar

--- a/alt final project html/index.html
+++ b/alt final project html/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div id="body">
 		<header id="main_header">
-			<!--Code Monkey Logo in Css-->
+			<!--Code Monkey Logo-->
 			<img src="images/monkey1.jpg" alt="code monkey logo" />
 			<h1>Client Site: COMP1950</h1>
 		</header>
@@ -29,9 +29,9 @@
 <nav id="globalheader" class="apple">
 
 <ul id="menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="protosite/index.html">Proto-site</a></li>
-				<li><a href="wireframe.html">WireFrames</a></li>
+				<li><a href="/codemonkeys/index.html">Home</a></li>
+				<li><a href="/codemonkeys/protosite/index.html">Proto-site</a></li>
+				<li><a href="/codemonkeys/wireframe.html">WireFrames</a></li>
 			</ul>
 	
 
