--- a/alt final project html/protosite/contact.html
+++ b/alt final project html/protosite/contact.html
@@ -4,6 +4,7 @@
 	<title>COMP 1950 | </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script>
 		
@@ -11,6 +12,14 @@
 </head>
 
 <body>
+ <script type="text/javascript">
+    var searchSection = 'global';
+    var searchCountry = 'us';
+</script>
+
+
+<script src="http://images.apple.com/global/nav/scripts/globalnav.js" type="text/javascript" charset="utf-8"></script>
+
 	<div id="body">
 		<a id="top"></a>
 		<header id="main_header">
@@ -21,40 +30,52 @@
 		<nav id="client_site">
 			<a href="../index.html">Back to Client Site</a>
 		</nav>
+		
+		<nav id="globalheader" class="apple">
 
-		<nav id="main_nav">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="course_outline.html">Course Outline</a></li>
-				<li><a id="lecture_tab" href="#">Lectures</a>
-				<ul id="lecture_dropdown">
-					<li><a href="lectures/lecture1.html">Lecture 1</a></li>
-					<li>Lecture 2</li>
-					<li>Lecture 3</li>
-					<li>Lecture 4</li>
-					<li>Lecture 5</li>
-					<li>Lecture 6</li>
-					<li>Lecture 7</li>
-					<li>Lecture 8</li>
-					<li>Lecture 9</li>
-					<li>Lecture 10</li>
-				</ul></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="sitemap.html">SiteMap</a></li>
-			</ul>
-		</nav>
+<ul id="menu">
+	<li><a href="/codemonkeys/protosite/index.html">Home</a></li>
+	<li><a href="/codemonkeys/protosite/course_outline.html">Course Outline</a></li>
+	<li>
+		<a href="#">Lecture</a>
+		<ul>
+			<li><a href="/codemonkeys/protosite/lectures/lecture1.html">Week 1</a></li>
+			<li><a href="#">Week 2</a></li>
+			<li><a href="#">Week 3</a></li>
+			<li><a href="#">Week 4</a></li>
+			<li><a href="#">Week 5</a></li>
+			<li><a href="#">Week 6</a></li>
+			<li><a href="#">Week 7</a></li>
+			<li><a href="#">Week 8</a></li>
+			<li><a href="#">Week 9</a></li>
+			<li><a href="#">Week 10</a></li>
+			<li><a href="#">Week 11</a></li>
+			<li><a href="#">Week 12</a></li>
+		</ul>
+	</li>
+	<li><a href="http://codemonkeys1950project.tumblr.com/">Blog</a></li>
+	<li><a href="/codemonkeys/protosite/contact.html">Contact</a></li>
+	<li><a href="/codemonkeys/protosite/sitemap.html">Site Map</a></li>
+</ul>	
 
-		<div id="globalsearch">
-        	<form action="http://www.google.com/search" method="get" class="search" id="g-search">
-        		<div class="sp-label">
-	          		<label for="sp-searchtext">Search</label>
-	           		<input type="text" name="q" id="sp-searchtext" accesskey="s" />
-				</div>
-			</form>
-	        <div id="sp-magnify"><div class="magnify-searchmode"></div><div class="magnify"></div></div>
-	        <div id="sp-results"></div>
-	    </div>
+     <div id="globalsearch">
+
+
+        <form action="http://www.google.com/search" method="get" class="search" id="g-search"><div class="sp-label">
+            <label for="sp-searchtext">Search</label>
+            <input type="text" name="q" id="sp-searchtext" accesskey="s" />
+			
+
+        </div></form>
+
+
+
+
+        <div id="sp-magnify"><div class="magnify-searchmode"></div><div class="magnify"></div></div>
+        <div id="sp-results"></div>
+    </div>
+</nav>
+
 
 		
 
@@ -73,14 +94,25 @@
 		</section> <!--END OF MAIN_CONTENT SECTION-->
 
 		<nav id="bottom_nav">
-			<ul>
-				<li><a href="#top">Top of Page</a></li>
-			</ul>
+			<a href="#top">Top of Page</a> 
+			<span class="none"> | </span>
+
+			<a href="http://my.bcit.ca/">my.bcit</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.bcit.ca/">bcit</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.computing.bcit.ca/">bcit: computing</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.alistair.com/">alistair.com</a>
+			<span class="none"> | </span>
 		</nav>
 
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer">HTML Validator</a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
 			</p>
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
 		</footer>
