--- a/alt final project html/protosite/index.html
+++ b/alt final project html/protosite/index.html
@@ -26,19 +26,19 @@
 		</header>
 
 		<nav id="client_site">
-			<a href="/codemonkey/index.html">Back to Client Site</a>
+			<a href="../index.html">Back to Client Site</a>
 		</nav>
 		
 		<script src="http://images.apple.com/global/nav/scripts/globalnav.js" type="text/javascript" charset="utf-8"></script>
 <nav id="globalheader" class="apple">
 
 <ul id="menu">
-	<li><a href="/codemonkey/protosite/index.html">Home</a></li>
-	<li><a href="/codemonkey/protosite/course_outline.html">Course Outline</a></li>
+	<li><a href="/codemonkeys/protosite/index.html">Home</a></li>
+	<li><a href="/codemonkeys/protosite/course_outline.html">Course Outline</a></li>
 	<li>
 		<a href="#">Lecture</a>
 		<ul>
-			<li><a href="/codemonkey/protosite/lectures/lecture1.html">Week 1</a></li>
+			<li><a href="/codemonkeys/protosite/lectures/lecture1.html">Week 1</a></li>
 			<li><a href="#">Week 2</a></li>
 			<li><a href="#">Week 3</a></li>
 			<li><a href="#">Week 4</a></li>
@@ -53,8 +53,8 @@
 		</ul>
 	</li>
 	<li><a href="http://codemonkeys1950project.tumblr.com/">Blog</a></li>
-	<li><a href="/codeymonkey/protosite/contact.html">Contact</a></li>
-	<li><a href="/codemonkey/protosite/sitemap.html">Site Map</a></li>
+	<li><a href="/codemonkeys/protosite/contact.html">Contact</a></li>
+	<li><a href="/codemonkeys/protosite/sitemap.html">Site Map</a></li>
 </ul>
 
      <div id="globalsearch">
@@ -179,13 +179,25 @@
 		</section> <!--END OF MAIN_CONTENT SECTION-->
 
 		<nav id="bottom_nav">
-			<ul>
-				<li><a href="#top">Top of Page</a></li>
-			</ul>
+			<a href="#top">Top of Page</a> 
+			<span class="none"> | </span>
+
+			<a href="http://my.bcit.ca/">my.bcit</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.bcit.ca/">bcit</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.computing.bcit.ca/">bcit: computing</a>
+			<span class="none"> | </span>
+
+			<a href="http://www.alistair.com/">alistair.com</a>
+			<span class="none"> | </span>
 		</nav>
+
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer">HTML Validator</a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
 			</p>
 			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
