Fixed first image

--- a/alt final project html/wireframe.html
+++ b/alt final project html/wireframe.html
@@ -4,7 +4,6 @@
 	<title>Code Monkey - Client Project Site</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link type="text/css" rel="stylesheet" href="style.css" />
-<<<<<<< HEAD
 	<link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.4.css" media="screen" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -12,8 +11,7 @@
 		$(function() {
 			$('#gallery a').lightBox();
 		});
-=======
-	
+	</script>
         <!-- jQuery lightBox plugin -->
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
@@ -23,7 +21,6 @@
 	$(function() {
 		$('#gallery a').lightBox({fixedNavigation:true});
 	});
->>>>>>> Added lightbox jquery to wireframe.html
 	</script>
 </head>
 <body>
@@ -73,7 +70,7 @@
 			<!--PUT IN JAVASCRIPT FOR LIGHTBOX FUNCTION-->
 			<nav id="gallery">
 				<figure>
-					<a href="images/h.jpg" title="Visual Mockup of Client Site with Bottom Nav Bar"><img src="images/bottom_nav_1.jpg" alt="wireframe1" width="120" height="79" /></a>
+					<a href="images/bottom_nav_1.jpg" title="Visual Mockup of Client Site with Bottom Nav Bar"><img src="images/bottom_nav_1.jpg" alt="wireframe1" width="120" height="79" /></a>
 					<figcaption>Visual Mockup of Client Site with Bottom Nav Bar</figcaption>
 				</figure>
 				<figure>
