Added site specific search

--- a/alt final project html/index.html
+++ b/alt final project html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Code Monkey - Client Project Site</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="style.css" />
-    <link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<link id="globalheader-stylesheet" rel="stylesheet" href="css/navigation.css" type="text/css" />
+	<script src="js/jquery.js"></script>
 	<script>
 		
 	</script>
@@ -38,23 +38,17 @@
      <div id="globalsearch">
 
 
-        <form action="http://www.google.com/search" method="get" class="search" id="g-search"><div class="sp-label">
+        <form action="http://www.google.com/search?site=http://teams.thenet.ca/codemonkeys" method="get" class="search" id="g-search"><div class="sp-label">
             <label for="sp-searchtext">Search</label>
+	    <input type="hidden"  name="sitesearch" value="checked" />
             <input type="text" name="q" id="sp-searchtext" accesskey="s" />
-			
 
         </div></form>
-
-
-
 
         <div id="sp-magnify"><div class="magnify-searchmode"></div><div class="magnify"></div></div>
         <div id="sp-results"></div>
     </div>
 </nav>
-
-		
-
 
 		<section id="main_content">
 			<header id="maincontent_header">
