--- a/alt final project html/index.html
+++ b/alt final project html/index.html
@@ -40,7 +40,7 @@
 
         <form action="http://www.google.com/search?site=http://teams.thenet.ca/codemonkeys" method="get" class="search" id="g-search"><div class="sp-label">
             <label for="sp-searchtext">Search</label>
-	    <input type="hidden"  name="sitesearch" value="http://teams.thenet.ca/codemonkeys/" />
+	    <input type="hidden"  name="sitesearch" value="teams.thenet.ca/codemonkeys" />
             <input type="text" name="q" id="sp-searchtext" accesskey="s" />
 
         </div></form>
