--- a/alt final project html/protosite/index.html
+++ b/alt final project html/protosite/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>COMP 1950 | Home</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="/codemonkeys/protosite/style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
@@ -21,8 +22,8 @@
 		<a id="top"></a>
 		<header id="main_header">
 			<!--Code Monkey Logo-->
-			<img src="images/bcitlogo.jpg" alt="BCIT Logo" />
-			<h1>COMP 1950 - Home</h1>
+			<a href="/codemonkeys/protosite/index.html"><img class="bcit" src="images/bcitlogo.jpg" alt="BCIT Logo" /></a>
+			<h1 id="protosite">COMP 1950 - Home</h1>
 		</header>
 
 		<nav id="client_site">
@@ -33,7 +34,7 @@
 <nav id="globalheader" class="apple">
 
 <ul id="menu">
-	<li><a href="/codemonkeys/protosite/index.html">Home</a></li>
+	<li><a id="current" href="/codemonkeys/protosite/index.html">Home</a></li>
 	<li><a href="/codemonkeys/protosite/course_outline.html">Course Outline</a></li>
 	<li>
 		<a href="#">Lecture</a>
@@ -192,14 +193,13 @@
 			<span class="none"> | </span>
 
 			<a href="http://www.alistair.com/">alistair.com</a>
-			<span class="none"> | </span>
+			
 		</nav>
 
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo"/></a>
 			</p>
-			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
 		</footer>
 	</div> <!--END OF BODY DIV-->
