--- a/alt final project html/protosite/course_outline.html
+++ b/alt final project html/protosite/course_outline.html
@@ -3,7 +3,8 @@
 <head>
 	<title>COMP 1950 | Outline</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="/codemonkeys/protosite/style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
 	 <link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script>
@@ -20,7 +21,8 @@
 		<a id="top"></a>
 		<header id="main_header">
 			<!--Code Monkey Logo in Css-->
-			<h1>COMP 1950 - Outline</h1>
+			<a href="/codemonkeys/protosite/index.html"><img class="bcit" src="images/bcitlogo.jpg" alt="BCIT Logo" /></a>
+			<h1 id="protosite">COMP 1950 - Outline</h1>
 		</header>
 
 		<nav id="client_site">
@@ -32,7 +34,7 @@
 
 <ul id="menu">
 	<li><a href="/codemonkeys/protosite/index.html">Home</a></li>
-	<li><a href="/codemonkeys/protosite/course_outline.html">Course Outline</a></li>
+	<li><a id="current" href="/codemonkeys/protosite/course_outline.html">Course Outline</a></li>
 	<li>
 		<a href="#">Lecture</a>
 		<ul>
@@ -169,7 +171,7 @@
 			<span class="none"> | </span>
 
 			<a href="http://www.alistair.com/">alistair.com</a>
-			<span class="none"> | </span>
+			
 		</nav>
 
 		<footer>
