--- a/alt final project html/protosite/lectures/lecture1.html
+++ b/alt final project html/protosite/lectures/lecture1.html
@@ -3,7 +3,7 @@
 <head>
 	<title>COMP 1950 | Lecture 1</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="/codemonkeys/protosite/style.css" />
     <link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script>
@@ -20,12 +20,12 @@
 		<a id="top"></a>
 		<header id="main_header">
 			<!--BCIT Logo-->
-			<img src="images/bcitlogo.jpg" alt="BCIT Logo" />
-			<h1>COMP 1950 - Lecture 1</h1>
+			<img class="bcit" src="/codemonkeys/images/bcitlogo.jpg" alt="BCIT Logo" />
+			<h1 id="protosite">COMP 1950 - Lecture 1</h1>
 		</header>
 
 		<nav id="client_site">
-			<a href="../index.html">Back to Client Site</a>
+			<a href="/codemonkeys/index.html">Back to Client Site</a>
 		</nav>
 		
 		<script src="http://images.apple.com/global/nav/scripts/globalnav.js" type="text/javascript" charset="utf-8"></script>
@@ -242,12 +242,12 @@
 			<span class="none"> | </span>
 
 			<a href="http://www.alistair.com/">alistair.com</a>
-			<span class="none"> | </span>
+			
 		</nav>
 
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="/codemonkeys/images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
 			</p>
 			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
