--- a/alt final project html/protosite/sitemap.html
+++ b/alt final project html/protosite/sitemap.html
@@ -3,7 +3,8 @@
 <head>
 	<title>COMP 1950 | SiteMap</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="/codemonkeys/protosite/style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
 	<link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script>
@@ -20,7 +21,8 @@
 		<a id="top"></a>
 		<header id="main_header">
 			<!--Code Monkey Logo in Css-->
-			<h1>COMP 1950 - SiteMap</h1>
+			<img class="bcit" src="images/bcitlogo.jpg" alt="BCIT Logo" />
+			<h1 id="protosite">COMP 1950 - SiteMap</h1>
 		</header>
 
 		<nav id="client_site">
@@ -52,7 +54,7 @@
 	</li>
 	<li><a href="http://codemonkeys1950project.tumblr.com/">Blog</a></li>
 	<li><a href="/codemonkeys/protosite/contact.html">Contact</a></li>
-	<li><a href="/codemonkeys/protosite/sitemap.html">Site Map</a></li>
+	<li><a id="current" href="/codemonkeys/protosite/sitemap.html">Site Map</a></li>
 </ul>
 
      <div id="globalsearch">
@@ -124,7 +126,7 @@
 			<span class="none"> | </span>
 
 			<a href="http://www.alistair.com/">alistair.com</a>
-			<span class="none"> | </span>
+			
 		</nav>
 
 		<footer>
