--- a/alt final project html/wireframe.html
+++ b/alt final project html/wireframe.html
@@ -3,26 +3,20 @@
 <head>
 	<title>Code Monkey - Client Project Site</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="style.css" />
-	<link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.4.css" media="screen" />
+		<link type="text/css" rel="stylesheet" href="/codemonkeys/protosite/style.css" />
+	
+	<link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
+
 	<script type="text/javascript">
 		$(function() {
-			$('#gallery a').lightBox();
+			$('#gallery a').lightBox({fixedNavigation:true});
 		});
 	</script>
-        <!-- jQuery lightBox plugin -->
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen" />
-        <!--/ jQuery lightBox plugin -->
-        <script type="text/javascript">
-	$(function() {
-		$('#gallery a').lightBox({fixedNavigation:true});
-	});
-	</script>
+	<link id="globalheader-stylesheet" rel="stylesheet" href="http://images.apple.com/global/nav/styles/navigation.css" type="text/css" />
 </head>
+
 <body>
 <script type="text/javascript">
     var searchSection = 'global';
@@ -31,7 +25,7 @@
 	<div id="body">
 		<header id="main_header">
 			<!--Code Monkey Logo-->
-			<img src="images/monkey1.jpg" alt="code monkey logo" />
+			<a href="/codemonkeys/index.html"><img src="images/monkey1.jpg" alt="code monkey logo" /></a>
 			<h1>Client Site: COMP1950 - Wireframes</h1>
 		</header>
 		
@@ -41,7 +35,7 @@
 <ul id="menu">
 				<li><a href="/codemonkeys/index.html">Home</a></li>
 				<li><a href="/codemonkeys/protosite/index.html">Proto-site</a></li>
-				<li><a href="/codemonkeys/wireframe.html">WireFrames</a></li>
+				<li><a id="current" href="/codemonkeys/wireframe.html">WireFrames</a></li>
 			</ul>
 
      <div id="globalsearch">
@@ -68,35 +62,38 @@
 				<h2>WireFrames</h2>
 			</header>
 			<!--PUT IN JAVASCRIPT FOR LIGHTBOX FUNCTION-->
-			<nav id="gallery">
-				<figure>
+			<section id="gallery">
+				<figure class="small_photo">
 					<a href="images/bottom_nav_1.jpg" title="Visual Mockup of Client Site with Bottom Nav Bar"><img src="images/bottom_nav_1.jpg" alt="wireframe1" width="120" height="79" /></a>
 					<figcaption>Visual Mockup of Client Site with Bottom Nav Bar</figcaption>
 				</figure>
-				<figure>
+				<figure class="small_photo">
 					<a href="images/webbcit1.jpg" title="Visual Mockup of Home Page for Client Site"><img src="images/webbcit1.jpg"  alt="webbcit1" width="120" height="79" /></a>
 					<figcaption>Visual Mockup of Home Page for Client Site</figcaption>
 				</figure>
-				<figure>
+				<figure class="small_photo">
 					<a href="images/webbcit2.jpg" title="Visual Mockup of Lecture Page for Client Site"><img src="images/webbcit2.jpg" alt="webbcit2" width="120" height="79" /></a>
 					<figcaption>Visual Mockup of Lecture Page for Client Site</figcaption>
 				</figure>
-				<figure>
+				<figure class="small_photo">
 					<a href="images/webbcit3.jpg" title="Visual Mockup of Nav Bar function"><img src="images/webbcit3.jpg" alt="webbcit3" width="120" height="79" /></a>
 					<figcaption>Visual Mockup of Nav Bar function</figcaption>
 				</figure>
-				<figure>
+				<figure class="small_photo">
 					<a href="images/wireframe1.jpg" title="Wireframe mockup for Client Site"><img src="images/wireframe1.jpg" alt="wireframe1" width="120" height="79" /></a>
 					<figcaption>Wireframe mockup for Client Site</figcaption>
 				</figure>
-			</nav>
-
+			</section>
+			
+			
 		</section> <!--END OF MAIN_CONTENT SECTION-->
+
+		
+
 		<footer>
 			<p id="referer">
-				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo" width="10%"/></a>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="images/HTML5_1Color_Black.png" alt="HTML 5 logo"/></a>
 			</p>
-			<hr />
 			<p id="copyright">Copyright&copy;Code Monkey 2012</p>
 		</footer>
 	</div> <!--END OF BODY DIV-->
